--- a/notes.html
+++ b/notes.html
@@ -23,13 +23,13 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4 list-container">
+            <div class="col-sm-4 list-container">
                 <div class="card">
                     <ul class="list-group">
                     </ul>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-sm-8">
                 <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
                 <textarea class="note-textarea" placeholder="Note Text"></textarea>
             </div>
