--- a/notes.html
+++ b/notes.html
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-8">
+            <div id="current-note" class="col-sm-8">
                 <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
                 <textarea class="note-textarea" placeholder="Note Text"></textarea>
             </div>
