--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
         <a class="navbar-brand" href="/">Note Taker
         </a>
     </nav>
-    <div class="container">
-    <div style="margin-top: 80px;" class="jumbotron text-center">
+    <div class="container px-0">
+    <div class="jumbotron text-center">
         <h1 class="display-5">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
-        <h4 class="mt-4">Take notes with Express</h4>
-        <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
+        <a class="btn btn-primary btn-lg mt-4 bg-dark border-0" href="/notes" role="button">Get Started</a>
     </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
