--- a/notes.html
+++ b/notes.html
@@ -13,6 +13,8 @@
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,7 +23,7 @@
         </a>
         <div class="icons">
             <i class="fas fa-save text-light save-note"></i>
-            <i class="fas fa-pen text-light new-note"></i>
+            <i class="fas fa-pen text-light new-note" role="button" data-toggle="modal" data-target="#new-note-modal"></i>
         </div>
     </nav>
     <div class="container-fluid">
@@ -38,6 +40,29 @@
             </div>
         </div>
     </div>
+  
+    <!-- Modal -->
+    <div class="modal fade" id="new-note-modal" tabindex="-1" role="dialog" aria-labelledby="new-note-modal-label" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="new-note-modal-label">Confirm New Note</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Unsaved changes will be lost. 
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">CANCEL</button>
+                <button id="confirm-new-note" type="button" class="btn btn-primary bg-dark border-0" data-dismiss="modal">Confirm</button>
+            </div>
+        </div>
+        </div>
+    </div>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 </body>
