Changed styling for button to confirm save.

--- a/notes.html
+++ b/notes.html
@@ -64,10 +64,10 @@
 
     <!-- Save Modal -->
     <div class="modal fade" id="saved-modal" tabindex="-1" role="dialog" aria-labelledby="saved-modal-label" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
-        <div class="modal-content">
-            
-            <button type="button" class="btn btn-primary btn-lg bg-dark border-0 p-4 m-3" data-dismiss="modal">Note Saved <i class="fas fa-check"></i></button>   
+        <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content text-center">
+            <h2 class="display-5 p-2">Note Saved</h2>
+            <button id="note-saved" type="button" class="btn btn-primary bg-dark border-0 p-2 m-3" data-dismiss="modal"><i class="fas fa-check"></i></button>   
         </div>
         </div>
     </div>
