--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Note Taker</title>
+    <!--Fontawesome-->
+    <script src="https://kit.fontawesome.com/f10d4c591f.js" crossorigin="anonymous"></script>
+    <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
+    <!--Custom Styles-->
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
+    <title>Note Taker</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Note Taker
-        </a>
-    </nav>
     <div class="container px-0">
     <div class="jumbotron text-center">
-        <h1 class="display-5">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
+        <h1 class="display-5">Note Taker <span role="img" aria-label="Memo"><i class="fas fa-pencil" id="home-pencil"></i></span></h1>
         <a class="btn btn-primary btn-lg mt-4 bg-dark border-0" href="/notes" role="button">Get Started</a>
     </div>
     </div>
