Moved images into image folder; updated readme file paths; Added favicon.

--- a/notes.html
+++ b/notes.html
@@ -20,6 +20,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!--Custom Styles-->
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
+    <!--Favicon-->
+    <link rel="icon" href="/assets/images/pencil.ico">
     <title>Note Taker</title>
 </head>
 
