--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
     <!--Custom Styles-->
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
+    <!--Favicon-->
+    <link rel="icon" href="/assets/images/pencil.ico">
     <title>Note Taker</title>
 </head>
 
