--- a/notes.html
+++ b/notes.html
@@ -74,7 +74,7 @@
     <div class="modal fade" id="saved-modal" tabindex="-1" role="dialog" aria-labelledby="saved-modal-label" aria-hidden="true">
         <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content text-center">
-            <h2 class="display-5 p-2">Note Saved</h2>
+            <h2 class="display-5 p-2" id="saved-modal-label">Note Saved</h2>
             <button id="note-saved" type="button" class="btn btn-primary bg-dark border-0 p-2 m-3" data-dismiss="modal"><i class="fas fa-check"></i></button>   
         </div>
         </div>
