--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
     <!--Custom Styles-->
     <link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
+    <script src="/assets/scripts/index.js" defer></script>
     <!--Favicon-->
     <link rel="icon" href="/assets/images/pencil.ico">
     <title>Note Taker</title>
@@ -23,8 +26,6 @@
         <a class="btn btn-primary btn-lg mt-4 bg-dark border-0" href="/notes" role="button">Get Started</a>
     </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/assets/scripts/index.js"></script>
 </body>
 
 </html>
