Added defer attribute to script for fontawesome (also for other script tags)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Fontawesome-->
-    <script src="https://kit.fontawesome.com/f10d4c591f.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/f10d4c591f.js" crossorigin="anonymous" defer></script>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css" />
     <!--Custom Styles-->
