Added meta description tags to index.html and notes.html

--- a/notes.html
+++ b/notes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Note-taking application allowing users to write, edit, and delete notes">
     <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500;600;700&family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
