--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Note-taking application allowing users to write, edit, and delete notes">
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/f10d4c591f.js" crossorigin="anonymous" defer></script>
     <!--Bootstrap-->
