--- a/notes.html
+++ b/notes.html
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <div id="current-note" class="col-sm-8">
-                <input class="note-title" placeholder="Note Title" maxlength="28" type="text">
-                <textarea class="note-textarea" placeholder="Note Text"></textarea>
+                <input class="note-title" placeholder="Note Title" maxlength="28" type="text" aria-label="Type note title here">
+                <textarea class="note-textarea" placeholder="Note Text" aria-label="Type note body here"></textarea>
             </div>
         </div>
     </div>
